<resources>
    <string name="app_name">Movies</string>
    <string name="content_description_image">poster do filme</string>
    <string name="movies_popular">Filmes populares</string>
    <string name="profile_title">Perfil</string>
    <string name="favorites">Favoritos</string>
    <string name="watchlist">Ver Depois</string>
    <string name="details">Detalhes</string>
    <string name="favorite">Favoritar</string>
    <string name="votes">Votos:</string>
    <string name="genres">Gêneros</string>
    <string name="overview">Resumo</string>
    <string name="recommendations">Recomendações</string>
    <string name="movies_top_rated">Filmes Mais Bem Avaliados</string>
    <string name="change_theme">Alterar tema</string>
    <string name="settings">Configurações</string>
    <string name="theme">Tema</string>
    <string name="light_theme">Claro</string>
    <string name="dark_theme">Escuro</string>
    <string name="share">Compartilhar</string>
    <string name="download">Baixar</string>
    <string name="downloading">Baixando</string>
    <string name="search_movies">Buscar filmes</string>
    <string name="minimum_characters_message">Digite pelo menos 4 caracteres para buscar</string>
</resources>