...
            LaunchedEffect(uiState.messageError) {
                uiState.messageError?.let {
                    Toast.makeText(context, it, Toast.LENGTH_SHORT).show()
                }
            }

            MovieDetailsScreen(
                uiState,
                toggleFavorite = {
                    scope.launch {
                        viewModel.toggleFavorite(id, it)
                    }
                },
...
